# muffin-tui

./: Cargo.toml  README.md
src/: app.rs  cli.rs  codex.rs  file_tree.rs  lib.rs  main.rs  remote.rs  syntax.rs  terminal.rs  theme.rs  ui.rs
tests/: app.rs  cli.rs  codex.rs  file_tree.rs  syntax.rs  terminal.rs  theme.rs  ui.rs
