[package]
name = "muffintui"
version = "0.1.0"
edition = "2024"
description = "A terminal workspace that combines a file tree, editor, shell, and embedded Codex pane"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sahildotexe/muffin-tui"
homepage = "https://github.com/sahildotexe/muffin-tui"
documentation = "https://docs.rs/muffintui"
keywords = ["tui", "terminal", "editor", "codex", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = "0.29"
portable-pty = "0.9"
ratatui = "0.29"
vt100 = "0.15.2"
