[package]
name = "muffintui"
version = "0.1.11"
edition = "2024"
description = "A terminal workspace that combines a file tree, editor, shell, and embedded Codex pane"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sahildotexe/muffin-tui"
homepage = "https://github.com/sahildotexe/muffin-tui"
documentation = "https://docs.rs/muffintui"
keywords = ["tui", "terminal", "editor", "codex", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "muffin"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
portable-pty = "0.9"
qrcodegen = "1.8"
rand = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
vt100 = "0.15.2"
